--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,9 @@
 .app.light {
   --bg-color: #DCDCDC;
+  --inverted-bg-color: #474A51;
 
   --primary-color: #333030;
+  --inverted-primary-color: #C3CBDE;
   --secondary-color: #4A4342;
+  --inverted-secondary-color: #CBE3F5;
 }
