--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,5 +10,5 @@
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
   // Размеры
-  --navbar-heigth: 50p;
+  --navbar-heigth: 50px;
 }
