I18n Internationalization. Define plugin for translations.

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -11,5 +11,10 @@
   bottom: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
+}
+
+.langSwitcher {
+  margin-left: 15px;
 }
