Error Boundary. React error handling.

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -3,6 +3,10 @@
   color: var(--primary-color);
 }
 
+.default {
+  color: var(--primary-color)
+}
+
 .clear {
   border: none;
   background: none;
