--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -3,6 +3,7 @@
   width: 300px;
   background: var(--inverted-bg-color);
   position: relative;
+  transition: width 0.2s;
 }
 
 .switchers {
@@ -16,4 +17,8 @@
 
 .langSwitcher {
   margin-left: 15px;
+}
+
+.collapsed {
+  width: 110px;
 }
